# environmentaltools

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
docs/: conf.py  download.rst  graphics.rst  index.rst  requirements.txt  spatiotemporal.rst
src/environmentaltools/: __init__.py
src/environmentaltools/common/: read.py  utils.py
src/environmentaltools/data/download/cordex_data/: coordinates.csv  queries.xlsx
src/environmentaltools/data/drone/: missions.csv
src/environmentaltools/data/drone/template_207BCB3D-29F8-466B-AF1C-55CEDC044786.kmz/wpmz/: template.kml  waylines.wpml
src/environmentaltools/data/temporal/marginal_fit/: Hm0_genpareto_lognorm_genpareto_nonst_1_trigonometric_4_SLSQP  Qd_weibull_max_nonst_1_sinusoidal_10_SLSQP.json  sunspots.txt
src/environmentaltools/data/temporal/multivariate_temporal_dependency/: Dc_md_norm_nonst_1_trigonometric_8_SLSQP  Vc_md_lognorm_nonst_1_trigonometric_8_SLSQP
src/environmentaltools/download/: __init__.py  cordex_data.py  cordex_data_intake.py  google_earth_engine.py  marine_copernicus.py  open_street_images.py
src/environmentaltools/examples/: download - E01 - google-earth-engine.ipynb  download - E01 - google-earth-engine.py  download - E02 - cordex-data.ipynb  download - E02 - cordex-data.py  download - E03 - copernicus.ipynb  download - E03 - copernicus.py  download - E04 - google_image.py  download - E05 - open-street-maps.py  drone - E01 - build_scan_pattern.ipynb  drone - E02 - create_missions_kmz.py  drone - E03 - rename_missions_to_drone.ipynb  spatiotemporal - E01 - raster-indicators.ipynb  spatiotemporal - E01 - raster-indicators.py  spatiotemporal - E02 - coastal-managers-indicators.py  spatiotemporal - E05 - bayesian-maximum-entropy.ipynb  spatiotemporal - E05 - bayesian-maximum-entropy.py  spatiotemporal - E06 - anisotropic-spatiotemporal-covariance.ipynb  spatiotemporal - E06 - anisotropic-spatiotemporal-covariance.py  temporal - E01 - marginal-fit.ipynb  temporal - E01 - marginal_fit.py  temporal - E02 - marginal-fit-transform.ipynb  temporal - E02 - marginal_fit_transform.py  temporal - E03 - multiyear-patterns.ipynb  temporal - E03 - multiyear_patterns.py  temporal - E04 - multivariate-temporal-dependency.ipynb  temporal - E04 - multivariate_temporal_dependency.py  temporal - E05 - multivariate-simulations.ipynb  temporal - E05 - multivariate_simulations.py  temporal - E06 - multivariate-ensemble-simulation.ipynb  temporal - E06 - multivariate_ensemble_simulation.py  temporal - E07 - maximum-dissimilitude-analysis.ipynb  temporal - E07 - maximum_dissimilarity_analysis.py
src/environmentaltools/graphics/: __init__.py  spatial.py  spatiotemporal.py  temporal.py
src/environmentaltools/processes/: compute.py  load.py
src/environmentaltools/spatiotemporal/: __init__.py  indicators.py  raster.py  utils.py
src/environmentaltools/spectral/: analysis.py
src/environmentaltools/temporal/: analysis.py  core.py  regimes.py  simulation.py
