[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "environmentaltools"
version = "2026.0.1"
authors = [
  { name = "Manuel Cobos", email = "mcobosb@ugr.es" },
]
maintainers = [
   { name = "Manuel Cobos", email = "mcobosb@ugr.es" }
]
description = "environmentaltools is an open-source Python package for modular environmental management, integrating timeseries analysis, raster-based processing, decision matrices, sensor workflows, and legal-administrative support for coastal and terrestrial systems."
readme = { file = "README.md", content-type = "text/markdown"} 
requires-python = ">=3.13"
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.13",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "loguru",
    "python-dotenv",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "xarray",
    "cmocean",
    "seaborn",
    "statsmodels",
    "windrose",
    "pillow",
    "scikit-learn",
    "cartopy",
    "rasterio",
    "lxml",
    "geopandas",
    "pyproj",
    "affine",
    "pyshp",
    "pypdf2",
    "tabula-py",
    "requests",
]

[project.optional-dependencies]
download = [
    "earthengine-api",
    "geemap",
    "cdo",
    "cdsapi",
    "configobj",
    "pydap",
    "esgf-pyclient",
    "tqdm",
    "werkzeug",
]
examples = ["ipykernel"]
spatial = ["folium"]
spatiotemporal = ["pymcdm", "glob2", "scikit-image"]
spectral = ["pytmd", "utide"]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    # Note: Heavy dependencies are mocked in docs/conf.py
    # to avoid installation issues on ReadTheDocs
    "tqdm",
    "glob2"
]
all = [
    "earthengine-api", # download
    "geemap",
    "cdo",
    "cdsapi",
    "configobj",
    "pydap",
    "esgf-pyclient",
    "tqdm",
    "werkzeug",
    "ipykernel", # examples
    "folium", # spatial
    "pymcdm", # spatiotemporal
    "glob2",
    "scikit-image",
    "pytmd", # spectral
]

[project.urls]
Homepage = "https://barrier.dinamicambiental.es"
Documentation = "https://environmentaltools.readthedocs.io/"
Source = "https://github.com/mcobosb/environmentaltools"
Tracker = "https://github.com/mcobosb/environmentaltools/issues"
Repository = "https://github.com/mcobosb/environmentaltools"
Changelog = "https://github.com/mcobosb/environmentaltools/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/environmentaltools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.poetry.dev-dependencies]
pytest = "^7.4"